Adding some features
